# jepa

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
configs/benchmark/: libero.yaml
configs/model/: vljepa.yaml
configs/training/: default.yaml
docs/: architecture.md  evaluation.md  reproducibility.md  setup.md  ssh_workflow.md  training.md
scripts/: eval.sh  train.sh
src/: __init__.py  run_eval.py
src/conformal/: __init__.py  lie_scorer.py  online_calibration.py  safe_policy.py
src/encoder/: __init__.py  language_adapter.py  vjepa2_wrapper.py
src/evaluation/: __init__.py  comparison.py  libero_eval.py  metaworld_eval.py
src/flow/: __init__.py  geodesic_flow.py  se3_manifold.py  se3_utils.py  velocity_field.py
src/policies/: __init__.py  base.py  jepa_vla.py  openvla.py  pi0.py  random.py
src/training/: __init__.py  losses.py  trainer.py
tests/: test_benchmarks.py  test_conformal.py  test_flow_matching.py  test_ode_accuracy.py  test_se3_utils.py  test_smoke.py
tools/: README.md  download_checkpoints.sh
