[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vl-jepa"
version = "0.1.0"
description = "Vision-Language Joint Embedding Predictive Architecture for Robotic Manipulation"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "VL-JEPA Team"},
]
keywords = [
    "robotics",
    "vision-language",
    "representation-learning",
    "flow-matching",
    "vla",
    "jepa",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "torch>=2.1",
    "torchdiffeq>=0.2.3",
    "e3nn>=0.5.1",
    "geoopt>=0.5.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "wandb>=0.16.0",
    "timm>=0.9.12",
    "transformers>=4.36.0",
    "einops>=0.7.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
libero = [
    "libero>=0.1.0",
]
metaworld = [
    "metaworld>=1.0.0",
]
lerobot = [
    "lerobot>=0.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
all = [
    "vl-jepa[libero,metaworld,lerobot,dev]",
]

[project.scripts]
vljepa-train = "vl_jepa.train:main"
vljepa-eval = "vl_jepa.eval:main"

[tool.setuptools.packages.find]
include = ["vl_jepa*"]

# ── Black ──────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310"]

# ── isort ──────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["vl_jepa"]

# ── Ruff ───────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # type-checking imports
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line-too-long (handled by formatter)
    "B008",   # function-call-in-default-argument (hydra)
    "SIM108", # ternary-operator (readability)
]

[tool.ruff.lint.isort]
known-first-party = ["vl_jepa"]

# ── mypy ───────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false       # gradual typing
check_untyped_defs = true
ignore_missing_imports = true       # many ML libs lack stubs

# ── pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
    "benchmark: marks benchmark sanity tests",
]
